review modules folders and other updates

--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="vars.css">
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="playback.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
-  <script type="text/javascript" src="audio.js"></script>
-  <script type="text/javascript" src="index.js"></script>
-  <div id="content">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="vars.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="playback.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
+    <script type="text/javascript" src="audio.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+  </head>
+  <body>
+    <div id="content">
     <div id="instructions">
       Below, enter the username given to you. Before pressing the button to
       start, make sure that you are ready to listen to sound from the device.
@@ -83,5 +86,6 @@
       Results
     </a>
   </div>
+  </body>
 </html>
 
