Found more files that got dropped

--- a/static/review.html
+++ b/static/review.html
@@ -59,9 +59,9 @@
               </button>
             </div>
             <div class="spacer">
-              <audio id="playing" controlslist="nodownload noplaybackrate">
-              </audio>
+              <audio id="playing" controlslist="nodownload noplaybackrate"></audio>
             </div>
+          </div>
           </div>
         </div>
         <div id="aux-data">
@@ -79,15 +79,10 @@
           </label>
         </div>
       </form>
-      <div id="next-wrapper">
+      <div id="next-wrapper" style="display: block;">
         <div class="next-outer-spacer"></div>
         <button id="overlay-results" class="base-button hidden" type="button">
           Results
-        </button>
-        <div class="next-mid-spacer"></div>
-        <button id="next-audio" class="base-button" type="button">
-          <span>Next Audio</span>
-          <span class="material-symbols-outlined">arrow_right_alt</span>
         </button>
         <div class="next-outer-spacer"></div>
       </div>
