--- a/static/review_index.html
+++ b/static/review_index.html
@@ -55,7 +55,7 @@
           
           <div id="new-fields" style="display:none">
             1. Download blank consent form: <br>
-            <button type="button" id="download-consent-btn" onclick="const link = document.createElement('a'); link.href = '/static/review_modules/consent_form_for_raters.pdf'; link.download = 'consent_form.pdf'; link.click();">Download Consent Form Here</button> 
+            <button type="button" id="download-consent-btn" onclick="const link = document.createElement('a'); link.href = 'var/www/jnd.emily/static/review_modules/consent_form_for_raters.pdf'; link.download = 'consent_form.pdf'; link.click();">Download Consent Form Here</button> 
             <br> <br>
             2. Upload your signed consent form: <br>
             <input type="file" id="filled-consent-form" name="filled-consent-form"> <br> <br>
