set audios to play automatically (Matt's request) and fix exit button

--- a/static/review.html
+++ b/static/review.html
@@ -57,6 +57,9 @@
                 <span>Next Audio</span>
                 <span class="material-symbols-outlined">arrow_right_alt</span>
               </button>
+              <div style="text-align: center; font-size: 0.4em; color: var(--page-text-color, #666); margin-top: 8px; opacity: 0.8;">
+                The next audio will play upon loading.
+              </div>
             </div>
             <div class="spacer">
               <audio id="playing" controlslist="nodownload noplaybackrate"></audio>
