--- a/static/review_index.html
+++ b/static/review_index.html
@@ -31,7 +31,7 @@
 
       This task consists of scoring clinical tests of speech recognition. Please use headphones and make sure you can hear the audio example.
       Score these as you would in routine clinical practice.
-      You may only listen to each playback once.
+      <strong><u>You may only listen to each playback once.</u></strong>
       <br><br>
       The key words are displayed to the right of the audio.
       Score each word correct (blue) or incorrect (red) by clicking it.
